add our blog section

--- a/src/index.html
+++ b/src/index.html
@@ -83,12 +83,67 @@
     </header>
 
     <div class="blog__container container">
-      <h3 class="blog__heading">OUR BLOG</h3>
-      <p class="blog__title">Suspendisse sed eros mollis, tincidunt felis eget, interdum eratullam sit amet odio.</p>
-      <div class="border__element">
-        <div class="border__left"></div>
-        <div class="border__circle"></div>
-        <div class="border__right"></div>
+      <div class="blog__heading">
+        <h3 class="blog__name">OUR BLOG</h3>
+        <p class="blog__title">Suspendisse sed eros mollis, tincidunt felis eget, interdum eratullam sit amet odio.</p>
+        <div class="border__element">
+          <div class="border__left"></div>
+          <div class="border__circle"></div>
+          <div class="border__right"></div>
+        </div>
+      </div>
+    </div>
+    <div class="blog__gallery">
+      <div class="blog__cards">
+
+        <div class="blog_row">
+          <div class="blog__card">
+            <div class="blog__card-img1 card card-img"></div>
+            <div class="blog__card-info card">
+              <span class="card__category">art / t-shirt</span>
+              <h4 class="card__name">T-SHIRT DESIGN</h4>
+              <div class="card__border"></div>
+              <p class="card__title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+              <a href="#" class="card__href">Read More  >></a>
+            </div>
+          </div>
+  
+          <div class="blog__card">
+            <div class="blog__card-img2 card card-img"></div>
+            <div class="blog__card-info card">
+              <span class="card__category">art / t-shirt</span>
+              <h4 class="card__name">T-SHIRT DESIGN</h4>
+              <div class="card__border"></div>
+              <p class="card__title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+              <a href="#" class="card__href">Read More  >></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="blog_row">
+          <div class="blog__card">
+            <div class="blog__card-info card">
+              <span class="card__category">art / t-shirt</span>
+              <h4 class="card__name">T-SHIRT DESIGN</h4>
+              <div class="card__border"></div>
+              <p class="card__title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+              <a href="#" class="card__href">Read More  >></a>
+            </div>
+            <div class="blog__card-img3 card card-img"></div>
+          </div>
+  
+          <div class="blog__card">
+            <div class="blog__card-info card">
+              <span class="card__category">art / t-shirt</span>
+              <h4 class="card__name">T-SHIRT DESIGN</h4>
+              <div class="card__border"></div>
+              <p class="card__title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+              <a href="#" class="card__href">Read More  >></a>
+            </div>
+            <div class="blog__card-img4 card card-img"></div>
+          </div>
+        </div>
+
       </div>
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
