section our blog finished

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
         <div class="blog_row">
           <div class="blog__card">
             <div class="blog__card-img1 card card-img"></div>
-            <div class="blog__card-info card">
+            <div class="blog__card-info">
               <span class="card__category">art / t-shirt</span>
               <h4 class="card__name">T-SHIRT DESIGN</h4>
               <div class="card__border"></div>
@@ -110,7 +110,7 @@
   
           <div class="blog__card">
             <div class="blog__card-img2 card card-img"></div>
-            <div class="blog__card-info card">
+            <div class="blog__card-info">
               <span class="card__category">art / t-shirt</span>
               <h4 class="card__name">T-SHIRT DESIGN</h4>
               <div class="card__border"></div>
@@ -145,6 +145,58 @@
         </div>
 
       </div>
+    </div>
+
+    <div class="blog__statistic container">
+      <div class="blog__statistic-cards">
+
+        <div class="blog__statistic-card card1">
+          <div class="card_circle">
+          </div>
+          <div class="card__statistic-title">
+            <div class="card__statistic-bold">3891</div>
+            <div>User Favourites</div>
+          </div>
+        </div>
+
+        <div class="blog__statistic-card card2">
+          <div class="card_circle">
+          </div>
+          <div class="card__statistic-title">
+            <div class="card__statistic-bold">281K</div>
+            <div>Posts Last 24 Hours</div>
+          </div>
+        </div>
+
+        <div class="blog__statistic-card card3">
+          <div class="card_circle">
+          </div>
+          <div class="card__statistic-title">
+            <div class="card__statistic-bold">618</div>
+            <div>Total Posts</div>
+          </div>
+        </div>
+
+        <div class="blog__statistic-card card4">
+          <div class="card_circle">
+          </div>
+          <div class="card__statistic-title">
+            <div class="card__statistic-bold">178</div>
+            <div>Campaigns</div>
+          </div>
+        </div>
+
+        <div class="blog__statistic-card card5">
+          <div class="card_circle">
+          </div>
+          <div class="card__statistic-title">
+            <div class="card__statistic-bold">285</div>
+            <div>Amazing Features</div>
+          </div>
+        </div>
+
+      </div>
+
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
